Changelog
=========

0.3.0
-----

* Added local configuration for the Forum content.

0.2.0
-----

* Added the debug mode to print mail contents but not send anything.

0.1.0 - Unreleased
------------------

* Initial release.
