@@ -1,5 +1,7 @@
 # -*- coding: utf-8 -*-
 
+import zope.interface
+
 from Products.Five.browser import BrowserView
 # from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from Products.Five.browser.pagetemplatefile import ZopeTwoPageTemplateFile # Plone 2.5 compatibility
@@ -24,17 +26,46 @@ class PloneboardNotificationSystemView(BrowserView):
     
     template = ZopeTwoPageTemplateFile("ploneboard_notification_forum.pt")
 
+    def _resetLocalConfiguration(self):
+        """Remove no more used properties from the context"""
+        context = self.context
+        context.manage_delProperties(['forum_sendto_values','forum_sendto_all'])
+        # zope.interface.noLongerProvides(context, ILocalBoardNotify) # Do not use until Plone 2.5 support will be dropped
+        zope.interface.directlyProvides(context, zope.interface.directlyProvidedBy(context)-ILocalBoardNotify)
+        
+    def _addNeededProperties(self, context):
+        """Add the properties forum_sendto_values and forum_sendto_all if not existings"""
+        if not context.hasProperty('forum_sendto_values'):
+            context.manage_addProperty('forum_sendto_values', [], 'lines')
+        if not context.hasProperty('forum_sendto_all'):
+            context.manage_addProperty('forum_sendto_all', False, 'boolean')        
+
     def _updateConfiguration(self, form):
         """Update saved configuration data"""
         context = self.context
-        forum_sendto_values = context.getProperty('forum_sendto_values', [])
         sendto_values = [x.strip() for x in form.get("sendto_values").replace("\r","").split("\n") if x]
-        # An empty value remove the property AND the provided interface
+        if form.get("sendto_all"):
+            sendto_all = True
+        else:
+            sendto_all = False
+        if not sendto_all and not sendto_values:
+             # Empty values remove properties AND the provided interface
+            self._resetLocalConfiguration()
+        else:
+            zope.interface.directlyProvides(context, ILocalBoardNotify)
+            self._addNeededProperties(context)
+            context.manage_changeProperties(forum_sendto_values=sendto_values,
+                                            forum_sendto_all=sendto_all)
 
     def load_sendto_values(self):
         """Load the local forum_sendto_values value"""
         context = self.context
         return "\n".join(context.getProperty('forum_sendto_values', []))
+
+    def load_sendto_all(self):
+        """Load the sendto_all value"""
+        context = self.context
+        return context.getProperty('forum_sendto_all', False)
 
 
 
