@@ -2,5 +2,5 @@ from zope.interface import Interface
 
 class ILocalBoardNotify(Interface):
     """
-    Marker interface for mark Ploneboard objects that use local notification parameters
+    Marker interface for Ploneboard objects that use local notification parameters
     """
